# PolitAgent-T2L

./: .gitignore  .gitmodules  BENCHMARK_README.md  README.md  game_askguess.py  game_beast.py  game_spyfall.py  game_tofukingdom.py  pyproject.toml  requirements_benchmark.txt  requirements_vllm.txt  run_benchmark.py  run_vllm_benchmark.sh  test_benchmark_simple.py  vllm_config_examples.json
askguess/: compute.py  demo.py
askguess/agents/: answer_agent.py
askguess/utils/: utils.py
base/: agent.py  game.py
beast/: game.py
beast/utils/: prompt.py
chat/: config.py  mistral_chat.py  openai_chat.py
configs/: benchmark_config.yaml  config.yaml  vllm_models.json
configs/experiment/: default.yaml  full_benchmark.yaml  model_comparison.yaml
configs/game/: askguess.yaml  diplomacy.yaml  spyfall.yaml
configs/model/: ollama.yaml  openai.yaml
core/: benchmark.py  benchmark_analyzer.py  benchmark_hydra.py  benchmark_visualizer.py  comprehensive_benchmark_analyzer.py
docs/: DIPLOMACY_METRICS.md  QUICK_START.md  README_VLLM.md  START_HERE.md  VLLM_SETUP.md  hydra_setup.md
environments/askguess/: README.md  __init__.py  actions.py  compute.py  game.py
environments/askguess/agents/: answer_agent.py  question_agent.py
environments/askguess/prompts/: answerer_easy.txt  answerer_hard.txt  host_description.txt  host_qa.txt  questioner_easy.txt  questioner_hard.txt
environments/askguess/utils/: prompt.py  utils.py
environments/beast/: README.md  __init__.py  game.py
environments/beast/agents/: __init__.py  base_agent.py
environments/beast/prompts/: alliance_formation_prompt.txt  choose_conversation_prompt.txt  conversation_prompt.txt  elimination_twist_prompt.txt  intelligence_gathering_prompt.txt  role_prompt.txt  strategic_challenge_prompt.txt  voting_results_prompt.txt  wealth_status_prompt.txt
environments/beast/utils/: __init__.py  prompt.py  utils.py
environments/diplomacy_game/: README.md  __init__.py  game.py
environments/diplomacy_game/agents/: __init__.py  diplomacy_agent.py
environments/diplomacy_game/utils/: __init__.py  prompt.py  utils.py
environments/spyfall/: README.md  compute_adversarial.py  game.py  spyfall_metrics.py
environments/spyfall/agents/: base_agent.py
environments/spyfall/prompts/: announce_prompt.txt  describe_prompt.txt  game_prompt.txt  labels.txt  vote_prompt.txt
environments/spyfall/utils/: prompt.py  utils.py
environments/tofukingdom/: README.md  __init__.py  game.py
environments/tofukingdom/agents/: __init__.py  base_agent.py  chef_agent.py  game_controller.py  guard_agent.py  maid_agent.py  prince_agent.py  role_agent.py
environments/tofukingdom/prompts/: game_prompt_en.txt  role_chef.txt  role_guard.txt  role_maid.txt  role_minister.txt  role_prince.txt  role_princess.txt  role_queen.txt  role_spy.txt
environments/tofukingdom/utils/: prompt.py  utils.py
examples/: askguess_metrics_example.py  beast_metrics_example.py  diplomacy_metrics_example.py  spyfall_metrics_example.py  tofukingdom_metrics_example.py
llm/: agent.py  base_chat.py  config.py  game.py  mistral_chat.py  models.py  ollama_chat.py  openai_chat.py  t2l_chat.py
metrics/: __init__.py  askguess_metrics.py  base_metrics.py  beast_metrics.py  diplomacy_metrics.py  spyfall_metrics.py  tofukingdom_metrics.py
outputs/politagent_benchmark/2025-05-26_14-19-52/: experiment_summary.json
outputs/politagent_benchmark/2025-05-26_14-19-52/.hydra/: hydra.yaml
outputs/politagent_benchmark/2025-05-26_14-19-52/results/: all_results.jsonl
outputs/politagent_benchmark/2025-05-26_14-23-48/.hydra/: config.yaml  hydra.yaml  overrides.yaml
outputs/politagent_benchmark/2025-05-26_14-23-48/results/: all_results.jsonl
outputs/politagent_benchmark/2025-05-26_14-24-14/: experiment_summary.json
outputs/politagent_benchmark/2025-05-26_14-24-14/.hydra/: config.yaml  hydra.yaml  overrides.yaml
outputs/politagent_benchmark/2025-05-26_14-26-05/: experiment_summary.json
outputs/politagent_benchmark/2025-05-26_18-31-56/: experiment_summary.json
results/beast/: game_state_round_1.json
scripts/: benchmark_analyzer.py  benchmark_config_runner.py  benchmark_runner.py  run_experiments.py  vllm_benchmark_cli.py
spyfall/: README.md  compute_adversarial.py  game.py  result_openai_openai.json
spyfall/agents/: base_agent.py
spyfall/metrics/: openai_openai_metrics.json
spyfall/utils/: prompt.py  utils.py
test_tofukingdom_results/: tofukingdom_game_1_1748281606.json  tofukingdom_game_2_1748281606.json  tofukingdom_game_3_1748281606.json  tofukingdom_game_4_1748281606.json
tofukingdom/: game.py
tofukingdom/agents/: base_agent.py
tofukingdom/utils/: utils.py
(+27 files in other folders)
