[tool.poetry]
name = "politagent-environments"
version = "0.1.0"
description = "PolitAgent environments for benchmarking LLM agents"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    {include = "environments"},
    {include = "core"},
    {include = "llm"},
    {include = "metrics"}
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
scikit-learn = ">=1.6.1,<2.0.0"
torch = "==2.6.0"
requests = ">=2.32.3,<3.0.0"
mistralai = ">=1.7.0,<2.0.0"
python-dotenv = ">=1.1.0,<2.0.0"
openai = ">=1.76.0,<2.0.0"
transformers = ">=4.51.1,<5.0.0"
langchain = ">=0.3.24,<0.4.0"
langchain-openai = ">=0.3.14,<0.4.0"
numpy = ">=2.2.5,<3.0.0"
matplotlib = ">=3.10.1,<4.0.0"
seaborn = ">=0.13.2,<0.14.0"
pandas = ">=2.2.3,<3.0.0"
langchain-mistralai = ">=0.2.10,<0.3.0"
langchain-community = ">=0.3.23,<0.4.0"
vllm = ">=0.8.5.post1,<0.9.0"
diplomacy = "^1.1.2"
langchain-ollama = "^0.3.3"
hydra-core = "^1.3.2"
psutil = "^7.0.0"
gputil = "^1.4.0"
# T2L (Text-to-LoRA) dependencies
huggingface-hub = {extras = ["cli"], version = "^0.30.0"}
peft = "^0.8.0"
accelerate = "^0.26.0"
datasets = "^2.16.0"
bitsandbytes = "^0.42.0"
hf-transfer = "^0.1.4"
torchmetrics = "^1.2.0"
inflect = "^7.0.0"
zstandard = "^0.22.0"
trl = "^0.7.0"
tensorboardx = "^2.6"
wandb = "^0.16.0"
fasttext-wheel = "^0.9.2"
rouge-score = "^0.1.2"
gradio = ">=5.29.0,<6.0.0"
safetensors = "^0.4.0"

[tool.poetry.scripts]
benchmark = "core.benchmark:main"
benchmark-hydra = "core.benchmark_hydra:run_hydra_benchmark"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
