[tool.poetry]
name = "politagent-environments"
version = "0.1.0"
description = "PolitAgent environments for benchmarking LLM agents"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    {include = "environments"},
    {include = "core"},
    {include = "llm"},
    {include = "metrics"}
]
[tool.poetry.dependencies]
fishfarm = { path = "text-to-lora/src/fishfarm", develop = true}
flash-attn = {url = "https://github.com/Dao-AILab/flash-attention/releases/download/v2.6.3/flash_attn-2.6.3+cu123torch2.3cxx11abiFALSE-cp310-cp310-linux_x86_64.whl", markers  = "python_version == '3.10' and sys_platform == 'linux' and platform_machine == 'x86_64'"}
python = "==3.10.18"
transformers = "4.46.2"
huggingface_hub = {extras = ["cli"], version = "*"}
peft = ">=0.8.0,<0.17.0"
accelerate = "*"
datasets = "*"
bitsandbytes = "*"
jupyter = "*"
matplotlib = "*"
hf_transfer = "*"
torchmetrics = "*"
inflect = "*"
zstandard = "*"
pre-commit = "*"
trl = "*"
evalplus = ">=0.2.0,<0.3.0"
tensorboardX = "*"
wandb = "*"
fasttext-wheel = "*"
rouge-score = "*"
gradio = ">=5.29.0"
vllm = ">=0.5.4"
scikit-learn = ">=1.6.1,<2.0.0"
torch = "*"
requests = ">=2.32.3,<3.0.0"
mistralai = ">=1.7.0,<2.0.0"
python-dotenv = ">=1.1.0,<2.0.0"
openai = ">=1.76.0,<2.0.0"
langchain = ">=0.3.24,<0.4.0"
langchain-openai = ">=0.3.14,<0.4.0"
numpy = ">=1.21.0,<2.2.0"
seaborn = ">=0.13.2,<0.14.0"
pandas = ">=2.2.3,<3.0.0"
langchain-mistralai = ">=0.2.10,<0.3.0"
langchain-community = ">=0.3.23,<0.4.0"
diplomacy = "*"
langchain-ollama = "*"
hydra-core = "*"
psutil = "*"
gputil = "*"

[tool.poetry.scripts]
benchmark = "core.benchmark:main"
benchmark-hydra = "core.benchmark_hydra:run_hydra_benchmark"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
